# quarto-web

./: .env  .gitignore  404.md  ANALISE_PROJETO.md  DESCRIPTION  Pipfile  README.md  TODO-NEWS.md  _changelog-1.2.md  _document-options-syntax-highlighting.md  _download-data.html  _download.html  _download.json  _download.md  _plausible.html  _publish.yml  _quarto-pr-preview.yml  _quarto-prerelease-docs.yml  _quarto-prerelease.yml  _quarto-rc.yml  _quarto.yml  _redirects  _style-guide.md  _variables.yml  about.md  about.qmd  authoring-tools.md  basic-usage.md  book-authoring.md  book-basics.md  bug-reports.qmd  computations.md  cross-references.md  crossref-knitr.Rmd  epub.md  executing-code.md  exporting-notebooks.md  figures-and-layout.md  footnotes-and-citations.md  formatting.md  (+39 more)
.claude/: settings.json
.githooks/: README.md  check-freeze.sh  claude-hook.sh  pre-commit
.well-known/: atproto-did
_internals/: updating-lua-autogen.md
_site/: 404.html  _redirects  about.html  get-started.html  index.css  index.html  index2.html  license.html  listings.json  robots.txt  search.json  sitemap.xml  styles.css  trademark.html
_tools/: README.md  gallery-screenshot.R  publish-date.ts  reference-cli-generate-md.R  reference.ts  release-notes.R  sort-gallery.R
docs/: _require-1.3.qmd  _require-1.4.qmd  authoring-tools.html  basic-usage.html  basics-jupyter.html  basics-knitr.html  book-authoring.html  book-basics.html  callouts.html  callouts.md  computations.html  cross-references.html  download-test.qmd  epub.html  equations.html  executing-code.html  formatting.html  (+28 more)
(+2125 files in other folders)
