[project]
name = "quarto-web"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "matplotlib",
    "tabulate",
    "great-tables",
    "pandas",
    "altair",
    "seaborn",
    "numpy",
    "ipyleaflet",
    "vega-datasets",
    "itables",
    "shiny",
    "plotly",
    "plotnine",
]
